spec/error_type_mismatch.kex
# Arithmetic between incompatible types is a runtime error.
main do
  IO.printLine("before")
  IO.printLine(1 + "two")
end
